--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,13 @@
 
 
 /* Fonts */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic");
 
 @font-face {
-	font-family: 'Rubik Distressed';
+	font-family: "Rubik Distressed";
 	font-style: normal;
 	font-weight: 400;
-	src: url('../assets/fonts/RubikDistressed-Regular.ttf');
+	src: url("../assets/fonts/RubikDistressed-Regular.ttf");
 }
 
 * {
@@ -29,7 +29,7 @@ body {
 	--border-24: 24px solid var(--orange);
 	--radius-50: 50px;
 	--radius-100: 100px;
-	font-family: 'Montserrat', sans-serif;
+	font-family: "Montserrat", sans-serif;
 }
 
 span {
